--- a/book-list-builder/src/App.css
+++ b/book-list-builder/src/App.css
@@ -6,67 +6,69 @@ font-family: 'Zen Antique Soft', serif;
 font-family: 'Zen Kaku Gothic New', sans-serif;
 font-family: 'Zen Kurenaido', sans-serif; */
 
+/* background 26 37	53	 */
+/* foreground 41 60	88	 */
+/* text 209	216	229	*/
+
+* {
+    background: rgba(26 37	53);
+}
+
 .App {
     margin: 0;
     padding: 0;
     font-family: 'Montserrat', sans-serif;
+    color: rgba(209, 216, 229);
 }
 
 .App h1, h2, h3, h4, h5, h6 {
     font-size: 1.25rem;
 }
 
+.app-container {
+    max-width: 750px;
+    margin: 0 auto;
+}
+
 /* NAVBAR */
 
 .logo-link {
     text-decoration: none;
+    color: rgba(209, 216, 229);
+}
+
+.logo-link:hover {
+    color: rgba(209, 216, 229);
+    text-decoration: underline;
 }
 
 .nav {
-    background-color: rgba(122	83	58);
-    padding: 10px 0 10px 0;
+    padding: 15px;
 }
 
 .nav h1 {
-    color: white;
-    margin: 0;
-    padding: 0;
-}
-
-.nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-.nav li {
-    display: inline;
-    padding-right: 20px;
-}
-
-.navbar-link {
-    text-decoration: none;
-    color: white;
-}
-
-.navbar-link:hover {
-    text-decoration: underline;
-    color: white;
+    font-size: 1.5rem;
 }
 
 /* RANDOM QUOTE */
 
 .random-quote {
     text-align: center;
-    margin: 10px 0 25px 0;
-    border: 2px solid rgba(204	202	201);
-    border-radius: 2px;
-    box-shadow: 1px 2px rgba(150 150 150);
+    margin: 15px 0 50px 0;
+    border-radius: 10px;
     font-family: 'Zen Kaku Gothic New', sans-serif;
+    background: rgba(41, 60, 88);
+    font-weight: bold;
+}
+
+.random-quote p {
+    background: rgba(41, 60, 88);
 }
 
 .author-bold {
     font-weight: 900;
+    background: rgba(41, 60, 88);
+    font-style: italic;
 }
 
 /* INSTRUCTIONS */
@@ -128,9 +130,17 @@ font-family: 'Zen Kurenaido', sans-serif; */
 .footer-link {
     text-decoration: none;
     font-size: 1.3rem;
+    color: rgba(209, 216, 229);
 }
 
 .footer-link:hover {
+    color: rgba(209, 216, 229);
     text-decoration: underline;
 }
+
+/* @media screen and (min-width: 500px) {
+    .search-results-cards{
+        max-width: 25%;
+    }
+} */
 
