removed bootstrap from nav, used flex instead

--- a/book-list-builder/src/App.css
+++ b/book-list-builder/src/App.css
@@ -44,6 +44,9 @@ font-family: 'Zen Kurenaido', sans-serif; */
 
 .nav {
     padding: 15px;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .nav h1 {
